Fixed submenus in collapsed mode

--- a/css/mold-nav.css
+++ b/css/mold-nav.css
@@ -8,7 +8,7 @@ ul.nav {
 
 ul.nav ul.hidden {
   position: absolute;
-  max-width: 250px;
+  /*max-width: 250px;*/
   z-index: 9999;
   margin: 0;
   padding:0;
@@ -110,4 +110,6 @@ a.clickable {
 	a.clickable:focus + ul {
 		display:block;
 	}
+	
+	ul.nav ul.hidden { position: relative; }
 }
